--- a/index.html
+++ b/index.html
@@ -1,2 +1,353 @@
-原版模组
-<button>test</button>
+<h1>1. 开始</h1>
+
+<p><strong>*The Meaning Of Life</strong><em> (下称</em>TMOL<em>)是由不笑君开发的一款模组,</em>TMOL<em>提供了多种玩法.
+</em>TMOL<em>将模组内的多种玩法,归纳为<strong>乡野</strong>,<strong>占星</strong>,<strong>生产与文明</strong>三大</em>模块*.</p>
+
+<p>(该图已过时)
+<img alt="alt TMOL玩法的思维简图" title="TMOL玩法的思维简图 旧" src="https://s2.ax1x.com/2020/02/05/1sqU5F.png"/></p>
+
+<p>接下来,你将以<em>模块</em>的形式,获得<em>TMOL</em>文档提供给你的信息与帮助.</p>
+
+<p>&lt;!-- TOC --&gt;</p>
+
+<ul><li><a href="#1-%e5%bc%80%e5%a7%8b">1. 开始</a><ul><li><a href="#11-%e4%b9%a1%e9%87%8e%e6%a8%a1%e5%9d%97">1.1. 乡野模块</a><ul><li><a href="#111-%e4%b9%a1%e9%87%8e%e5%bc%80%e5%a7%8b">1.1.1. 乡野开始</a></li><li><a href="#112-%e5%86%9c%e4%b8%9a%e4%b8%8e%e5%b1%85%e4%bd%8f">1.1.2. 农业与居住</a></li><li><a href="#1121-%e5%86%9c%e4%bd%9c%e7%89%a9">1.1.2.1. 农作物</a><ul><li><a href="#11211-%e9%98%b2%e9%a3%8e%e8%8d%89parsnip">1.1.2.1.1. 防风草(Parsnip)</a></li><li><a href="#11212-%e7%81%af%e7%ac%bc%e6%a4%92pepper">1.1.2.1.2. 灯笼椒(Pepper)</a></li><li><a href="#11213-%e6%a3%b1%e4%b8%9d%e5%ad%90">1.1.2.1.3. 棱丝子</a></li><li><a href="#11214-%e8%8a%8b%e5%a4%b4">1.1.2.1.4. 芋头</a></li></ul></li><li><a href="#1122-%e8%b1%8c%e8%b1%86%e6%a4%8d%e6%a0%aa">1.1.2.2. 豌豆植株</a><ul><li><a href="#11221-%e8%b1%8c%e8%b1%86%e7%9a%84%e8%87%aa%e7%84%b6%e8%8e%b7%e5%8f%96">1.1.2.2.1. 豌豆的自然获取</a></li><li><a href="#11222-%e8%b1%8c%e8%b1%86%e7%9a%84%e4%ba%ba%e5%b7%a5%e5%9f%b9%e8%82%b2">1.1.2.2.2. 豌豆的人工培育</a></li><li><a href="#11223-%e5%a4%9a%e7%a7%8d%e8%b1%8c%e8%b1%86">1.1.2.2.3. 多种豌豆</a></li></ul></li><li><a href="#1123-%e5%86%9c%e4%b8%9a%e6%8a%80%e6%9c%af">1.1.2.3. 农业技术</a><ul><li><a href="#11231-%e5%ad%9f%e5%be%b7%e5%b0%94%e7%9a%84%e5%88%86%e7%a6%bb%e5%ae%9a%e5%be%8b">1.1.2.3.1. 孟德尔的分离定律</a></li><li><a href="#11232-%e5%8e%bb%e9%9b%84">1.1.2.3.2. 去雄</a></li><li><a href="#11233-%e6%8e%88%e7%b2%89">1.1.2.3.3. 授粉</a></li><li><a href="#11234-%e8%87%aa%e5%8a%a8%e5%8c%96%e7%a7%8d%e6%a4%8d">1.1.2.3.4. 自动化种植</a></li></ul></li></ul></li><li><a href="#12-%e5%8d%a0%e6%98%9f%e6%a8%a1%e5%9d%97">1.2. 占星模块</a><ul><li><a href="#121-%e5%8d%a0%e6%98%9f%e5%bc%80%e5%a7%8b">1.2.1. 占星开始</a></li><li><a href="#122-%e9%ad%94%e5%8a%9b">1.2.2. 魔力</a></li><li><a href="#123-%e9%ad%94%e7%89%a9">1.2.3. 魔物</a></li><li><a href="#124-%e4%bb%b0%e6%98%9f%e5%8f%b0">1.2.4. 仰星台</a></li><li><a href="#125-%e6%98%9f%e7%93%b6">1.2.5. 星瓶</a></li><li><a href="#126-%e6%99%b4%e5%a4%a9%e5%a8%83%e5%a8%83">1.2.6. 晴天娃娃</a></li><li><a href="#1261-%e5%af%bf%e5%91%bd">1.2.6.1. 寿命</a><ul><li><a href="#12611-%e6%b6%88%e9%80%9d">1.2.6.1.1. 消逝</a></li><li><a href="#126111-%e5%8f%ac%e5%9b%9e">1.2.6.1.1.1. 召回</a></li></ul></li><li><a href="#1262-%e8%af%8d%e7%bc%80">1.2.6.2. 词缀</a><ul><li><a href="#12621-%e6%bb%a5%e5%88%b6%e7%9a%84shoddy">1.2.6.2.1. 滥制的(Shoddy)</a></li><li><a href="#12622-%e5%af%bb%e5%b8%b8%e7%9a%84common">1.2.6.2.2. 寻常的(Common)</a></li><li><a href="#12623-%e8%81%aa%e6%98%8e%e7%9a%84">1.2.6.2.3. 聪明的</a></li><li><a href="#12624-%e8%bf%85%e6%8d%b7%e7%9a%84">1.2.6.2.4. 迅捷的</a></li><li><a href="#12625-%e8%bf%9f%e9%92%9d%e7%9a%84">1.2.6.2.5. 迟钝的</a></li><li><a href="#12626-%e5%8b%a4%e5%bf%ab%e7%9a%84">1.2.6.2.6. 勤快的</a></li><li><a href="#12627-%e6%87%92%e6%83%b0%e7%9a%84">1.2.6.2.7. 懒惰的</a></li><li><a href="#12628-%e5%92%92%e6%80%a8%e7%9a%84">1.2.6.2.8. 咒怨的</a></li><li><a href="#12629-%e6%9a%b4%e8%ba%81%e7%9a%84">1.2.6.2.9. 暴躁的</a></li><li><a href="#126210-%e6%84%9a%e8%a0%a2%e7%9a%84">1.2.6.2.10. 愚蠢的</a></li><li><a href="#126211-%e8%87%aa%e7%84%b6%e7%9a%84">1.2.6.2.11. 自然的</a></li></ul></li><li><a href="#127-%e7%a5%9e%e5%ae%9a%e5%8f%b0">1.2.7. 神定台</a></li><li><a href="#1271-%e7%ac%a6%e5%92%92">1.2.7.1. 符咒</a><ul><li><a href="#12711-%e5%89%8d%e7%bc%80%e7%ac%a6%e5%92%92">1.2.7.1.1. 前缀符咒</a></li><li><a href="#12712-%e5%8d%81%e4%ba%8c%e7%ac%a6%e5%92%92">1.2.7.1.2. 十二符咒</a></li><li><a href="#127121-%e5%ad%90%e7%ac%a6">1.2.7.1.2.1. 子符</a></li><li><a href="#127122-%e4%b8%91%e7%ac%a6">1.2.7.1.2.2. 丑符</a></li><li><a href="#127123-%e5%af%85%e7%ac%a6">1.2.7.1.2.3. 寅符</a></li><li><a href="#127124-%e5%8d%af%e7%ac%a6">1.2.7.1.2.4. 卯符</a></li><li><a href="#127125-%e8%be%b0%e7%ac%a6">1.2.7.1.2.5. 辰符</a></li><li><a href="#127126-%e5%b7%b3%e7%ac%a6">1.2.7.1.2.6. 巳符</a></li><li><a href="#127127-%e5%8d%88%e7%ac%a6">1.2.7.1.2.7. 午符</a></li><li><a href="#127128-%e6%9c%aa%e7%ac%a6">1.2.7.1.2.8. 未符</a></li><li><a href="#127129-%e7%94%b3%e7%ac%a6">1.2.7.1.2.9. 申符</a></li><li><a href="#1271210-%e9%85%89%e7%ac%a6">1.2.7.1.2.10. 酉符</a></li><li><a href="#1271211-%e6%88%8c%e7%ac%a6">1.2.7.1.2.11. 戌符</a></li><li><a href="#1271212-%e4%ba%a5%e7%ac%a6">1.2.7.1.2.12. 亥符</a></li></ul></li><li><a href="#128-%e5%88%b6%e6%9d%96%e5%8f%b0">1.2.8. 制杖台</a></li><li><a href="#129-%e7%a2%8e%e7%9f%b3%e9%87%87%e7%9f%bf%e4%ba%95">1.2.9. 碎石采矿井</a></li><li><a href="#1210-%e7%bf%bb%e5%9c%9f%e4%ba%95">1.2.10. 翻土井</a></li></ul></li><li><a href="#13-%e7%94%9f%e4%ba%a7%e4%b8%8e%e6%96%87%e6%98%8e%e6%a8%a1%e5%9d%97">1.3. 生产与文明模块</a><ul><li><a href="#131-%e7%94%9f%e4%ba%a7%e4%b8%8e%e6%96%87%e6%98%8e%e5%bc%80%e5%a7%8b">1.3.1. 生产与文明开始</a></li><li><a href="#132-%e5%9d%a9%e5%9f%9a">1.3.2. 坩埚</a></li></ul></li><li><a href="#14-tmol%e8%87%aa%e7%84%b6%e7%94%9f%e6%88%90%e7%bb%93%e6%9e%84">1.4. TMOL自然生成结构</a><ul><li><a href="#141-%e6%9c%a8%e5%b1%8b">1.4.1. 木屋</a></li><li><a href="#142-%e6%a2%a6%e5%a2%83">1.4.2. 梦境</a></li><li><a href="#1421-%e6%a2%a6%e7%89%a2">1.4.2.1. 梦牢</a></li><li><a href="#1422-%e6%91%84%e6%a2%a6%e4%ba%ba%e5%99%ac%e6%a2%a6%e4%bd%93">1.4.2.2. 摄梦人/噬梦体</a></li><li><a href="#143-%e5%8f%a4%e6%a0%91">1.4.3. 古树</a></li></ul></li><li><a href="#15-%e9%99%a8%e7%9f%b3">1.5. 陨石</a><ul><li><a href="#151-%e9%99%a8%e7%9f%b3%e5%9d%91">1.5.1. 陨石坑</a></li><li><a href="#152-%e9%99%a8%e9%93%81%e7%9f%bf%e7%9f%b3">1.5.2. 陨铁矿石</a></li><li><a href="#153-%e9%99%a8%e9%93%81%e9%94%ad">1.5.3. 陨铁锭</a></li><li><a href="#154-%e9%99%a8%e9%93%81%e7%a8%bf">1.5.4. 陨铁稿</a></li><li><a href="#155-%e9%99%a8%e9%93%81%e9%94%84%e9%99%a8%e9%93%81%e9%93%b2%e9%99%a8%e9%93%81%e6%96%a7%e7%ad%89">1.5.5. 陨铁锄,陨铁铲,陨铁斧等</a></li><li><a href="#156-%e6%b5%81%e6%98%9f%e4%b8%8a%e7%9a%84%e7%8c%aa">1.5.6. 流星上的猪</a></li></ul></li></ul></li></ul>
+
+<p>&lt;!-- /TOC --&gt;</p>
+
+<h2>1.1. 乡野模块</h2>
+
+<h3>1.1.1. 乡野开始</h3>
+
+<p><em>Minecraft原版工作台</em>(下称工作台)用以合成物品,<em>乡野工作台</em>则用以合成<em>TMOL</em>中有关<em>乡野</em>的物品.</p>
+
+<p>在工作台摆放如下以合成<em>乡野工作台</em>.
+<img alt="alt 合成乡野工作台" title="合成乡野工作台" src="https://s2.ax1x.com/2020/02/05/1sXJbt.png"/></p>
+
+<h3>1.1.2. 农业与居住</h3>
+
+<h4>1.1.2.1. 农作物</h4>
+
+<h5>1.1.2.1.1. 防风草(Parsnip)</h5>
+
+<p><em>防风草</em>即欧洲萝卜,是一种常见的茎状植物.通过破坏野草,以获得防风草种子.防风草种子成熟的周期为1个小麦周期.</p>
+
+<p><em>防风草</em>具有极高的中药价值,在合成,制造中药时,防风草非常有用.</p>
+
+<h5>1.1.2.1.2. 灯笼椒(Pepper)</h5>
+
+<p><em>灯笼椒</em>是一种常见的经济作物,与辣椒不同的是,灯笼椒的口感温和,可直接食用.通过破坏野草,以获得灯笼椒种子.灯笼椒种子成熟的周期为5天,灯笼椒种子成熟后变为灯笼椒植株.灯笼椒植株每半个小麦周期,会产出1~3个灯笼椒.</p>
+
+<p>使用<em>剪刀</em>为灯笼椒植株进行<em>裁剪</em>,以获得更多的灯笼椒.</p>
+
+<p>灯笼椒食用后,将获得<em>麻辣</em>效果.</p>
+
+<h5>1.1.2.1.3. 棱丝子</h5>
+
+<p>(过时,待补充)</p>
+
+<p><em>棱菟</em>,一种未闻其名,先闻其身的野生植物.有传闻称其来自太阳系的第九大行星.有植物学家指出,<em>棱菟</em>通常混杂在杂草丛生的地方,以进行自我保护.</p>
+
+<p>棱菟种子成熟的周期是2个小麦周期,棱菟种子成熟后变为棱菟植株,一次性采摘.采摘后可食用,由于其较长的柄,也可做武器使用.</p>
+
+<h5>1.1.2.1.4. 芋头</h5>
+
+<p><em>芋头</em>,一种生长高效,易于填饱肚子的食物.在采摘马铃薯的过程中,有几率获得马铃薯的变种--<em>芋子</em>.种植<em>芋子</em>可获得芋头.<em>芋子</em>的成熟周期为1个小麦周期,<em>芋子</em>成熟后成为<em>芋头</em>,破坏可获得1~3个芋头和1~2个<em>芋子</em>.</p>
+
+<h4>1.1.2.2. 豌豆植株</h4>
+
+<p><em>豌豆植株</em>是一种自花传粉,闭花受粉的植物.因此其在自然界中广泛分布为纯种.</p>
+
+<h5>1.1.2.2.1. 豌豆的自然获取</h5>
+
+<p>Minecraft中广泛分布野生的纯种豌豆植株,破坏野生豌豆植株以随机获得多种性状的豌豆.</p>
+
+<h5>1.1.2.2.2. 豌豆的人工培育</h5>
+
+<p>直接种植豌豆即可,在第二个生长阶段,通过使用<em>剪刀</em>为其去雄,以及<em>画笔</em>为其授粉,你将会获得<em>花粉</em>和<em>花蕊</em>.</p>
+
+<p>用<em>花粉</em>对其他处在第二个生长阶段的豌豆植株进行异花培育,将获得杂种豌豆.</p>
+
+<h5>1.1.2.2.3. 多种豌豆</h5>
+
+<p><em>TMOL</em>提供了多个相对性状(分别为<em>显性</em> 与 <em>隐性</em>):</p>
+
+<p><em>高茎</em> 与 <em>矮茎</em>,<em>圆粒</em> 与 <em>皱粒</em>,<em>绿色</em> 与 <em>黄色</em>,</p>
+
+<h4>1.1.2.3. 农业技术</h4>
+
+<h5>1.1.2.3.1. 孟德尔的分离定律</h5>
+
+<p><em>TMOL</em>仅在<em>豌豆植株</em>上支持孟德尔的分离定律,以提高游戏性.</p>
+
+<h5>1.1.2.3.2. 去雄</h5>
+
+<p>使用<em>剪刀</em>右键第二生长阶段的豌豆植株,以获得1~2个<em>花蕊</em>.</p>
+
+<p>去雄的豌豆植株在下次被授粉之前,不会进行生长.</p>
+
+<p>去雄的豌豆植株在被授粉之后,将进行基因型的分离,进行生长.</p>
+
+<h5>1.1.2.3.3. 授粉</h5>
+
+<p>使用<em>画笔</em>右键第二生长阶段的豌豆植株,已获得1~2个<em>花粉</em>.</p>
+
+<p>对去雄的豌豆植株进行授粉,以对豌豆植株进行杂交.</p>
+
+<h5>1.1.2.3.4. 自动化种植</h5>
+
+<p>使用<em>翻土井</em>.</p>
+
+<h2>1.2. 占星模块</h2>
+
+<h3>1.2.1. 占星开始</h3>
+
+<p>工作台用以合成物品,<em>占星工作台</em>则用以合成<em>TMOL</em>中有关<em>占星</em>的物品.</p>
+
+<p>在工作台摆放如下以合成<em>占星工作台</em>.
+<img alt="alt 合成占星工作台" title="请脑补将种子替换为书本" src="https://s2.ax1x.com/2020/02/05/1sXJbt.png"/></p>
+
+<h3>1.2.2. 魔力</h3>
+
+<p><em>魔力</em>是一种广泛存在于Minecraft中的潜在物质.</p>
+
+<p><em>占星</em>的本质即利用魔力的力量,并与<em>魔力</em>定下契约.</p>
+
+<h3>1.2.3. 魔物</h3>
+
+<p>蕴含强大魔力的物品,例如<em>陨石锭</em>,<em>落星</em>,<em>古树树干</em>等.</p>
+
+<h3>1.2.4. 仰星台</h3>
+
+<p>在<em>占星工作台</em>中摆放如下以合成<em>仰星台</em>:</p>
+
+<p>(图)</p>
+
+<p><em>仰星台</em>,是连接大地与星辰的工具.</p>
+
+<p>在<em>仰星台</em>中放入魔物,<em>仰星台</em>将会消耗魔物,并为周围以半径为5的球体范围内提供魔力.</p>
+
+<h3>1.2.5. 星瓶</h3>
+
+<p>将<em>落星</em>瓶装,使其与天地魔力隔离,将获得<em>星瓶</em>.</p>
+
+<p><em>星瓶</em>的用途是用来检测魔力的,如果玩家所在区域具有魔力并手持<em>星瓶</em>,那么<em>星瓶</em>将会发出<em>落星</em>的闪耀的光芒.</p>
+
+<h3>1.2.6. 晴天娃娃</h3>
+
+<p>将<em>魔力</em>与<em>实物</em>结合的媒介.通俗地来说,是将魔力转换为机械能的娃娃.</p>
+
+<p>在<em>占星工作台</em>中摆放如下以合成<em>滥制 的 晴天娃娃</em>:</p>
+
+<p>(图)</p>
+
+<h4>1.2.6.1. 寿命</h4>
+
+<p><em>晴天娃娃</em>与你一样,具有<em>寿命</em>.在<em>晴天娃娃</em>工作的时候,会损伤<em>寿命</em>,当<em>寿命</em>达到某一值后,一个独一无二的晴天娃娃会从这个世界上<em>消逝</em>.</p>
+
+<h5>1.2.6.1.1. 消逝</h5>
+
+<p>  即死亡.</p>
+
+<h6>1.2.6.1.1.1. 召回</h6>
+
+<p>你可以<em>召回</em>已消逝的<em>晴天娃娃</em>.
+待补充.</p>
+
+<h4>1.2.6.2. 词缀</h4>
+
+<p><em>晴天娃娃</em>拥有多种<em>词缀</em>以决定<em>晴天娃娃</em>的不同品质,类似于Minecraft中的附魔.</p>
+
+<h5>1.2.6.2.1. 滥制的(Shoddy)</h5>
+
+<p>玩家合成.</p>
+
+<h5>1.2.6.2.2. 寻常的(Common)</h5>
+
+<p>待补充</p>
+
+<h5>1.2.6.2.3. 聪明的</h5>
+
+<p>待补充</p>
+
+<h5>1.2.6.2.4. 迅捷的</h5>
+
+<p>待补充</p>
+
+<h5>1.2.6.2.5. 迟钝的</h5>
+
+<p>待补充</p>
+
+<h5>1.2.6.2.6. 勤快的</h5>
+
+<p>待补充</p>
+
+<h5>1.2.6.2.7. 懒惰的</h5>
+
+<p>待补充</p>
+
+<h5>1.2.6.2.8. 咒怨的</h5>
+
+<p>待补充</p>
+
+<h5>1.2.6.2.9. 暴躁的</h5>
+
+<p>待补充</p>
+
+<h5>1.2.6.2.10. 愚蠢的</h5>
+
+<p>待补充</p>
+
+<h5>1.2.6.2.11. 自然的</h5>
+
+<p>待补充</p>
+
+<h3>1.2.7. 神定台</h3>
+
+<p>在<em>占星工作台</em>中摆放如下以合成<em>神定台</em>:</p>
+
+<p>(图)</p>
+
+<p>在魔力范围内,制造<em>晴天娃娃</em>或为<em>晴天娃娃</em>附上<em>符咒</em>.</p>
+
+<h4>1.2.7.1. 符咒</h4>
+
+<p>使得<em>晴天娃娃</em>释放更强大力量的媒介,可以激活<em>晴天娃娃</em>的潜在特性.</p>
+
+<h5>1.2.7.1.1. 前缀符咒</h5>
+
+<p>例如<em>聪明的符咒</em>,在<em>神定台</em>中为<em>晴天娃娃</em>神定(v.)此符咒,<em>晴天娃娃</em>获得<em>聪明的</em>词缀.</p>
+
+<p>如果属于相对词缀的符咒同时神定,例如,将<em>聪明的符咒</em>和<em>愚蠢的符咒</em>同时神定,该<em>晴天娃娃</em>很大可能会消逝(参考1.2.6.1).</p>
+
+<h5>1.2.7.1.2. 十二符咒</h5>
+
+<p>十二符咒只能在自然生成中的结构中寻找到.</p>
+
+<h6>1.2.7.1.2.1. 子符</h6>
+
+<h6>1.2.7.1.2.2. 丑符</h6>
+
+<h6>1.2.7.1.2.3. 寅符</h6>
+
+<h6>1.2.7.1.2.4. 卯符</h6>
+
+<h6>1.2.7.1.2.5. 辰符</h6>
+
+<h6>1.2.7.1.2.6. 巳符</h6>
+
+<h6>1.2.7.1.2.7. 午符</h6>
+
+<h6>1.2.7.1.2.8. 未符</h6>
+
+<h6>1.2.7.1.2.9. 申符</h6>
+
+<h6>1.2.7.1.2.10. 酉符</h6>
+
+<h6>1.2.7.1.2.11. 戌符</h6>
+
+<h6>1.2.7.1.2.12. 亥符</h6>
+
+<h3>1.2.8. 制杖台</h3>
+
+<p>在<em>占星工作台</em>中摆放如下以合成<em>制杖台</em>:</p>
+
+<p>(图)</p>
+
+<p>在<em>制杖台</em>中放置<em>木杖</em>和1~3个<em>晴天娃娃</em>,以获得<em>魔杖</em>.</p>
+
+<p>玩家右键使用魔杖,可在周围召唤最多3个随时跟随的<em>晴天娃娃</em>.</p>
+
+<p>不同的<em>晴天娃娃</em>的<em>词缀</em>,所召唤出的<em>晴天娃娃</em>具有不同的特性.</p>
+
+<p><em>暴躁的</em>,<em>咒怨的</em> 词缀的<em>晴天娃娃</em>在召唤出后,具有攻击性.</p>
+
+<h3>1.2.9. 碎石采矿井</h3>
+
+<p>在<em>占星工作台</em>中摆放如下以合成<em>碎石采矿井</em>:</p>
+
+<p>(图)</p>
+
+<p>在碎石采矿井中放置1个<em>晴天娃娃</em>以运作.</p>
+
+<p>不同的<em>晴天娃娃</em>的<em>词缀</em>,对碎石破坏的加成具有不同的特性.</p>
+
+<h3>1.2.10. 翻土井</h3>
+
+<p>在<em>占星工作台</em>中摆放如下以合成<em>碎石采矿井</em>:</p>
+
+<p>(图)</p>
+
+<p>在碎石采矿井中放置1个<em>晴天娃娃</em>以运作.</p>
+
+<p>不同的<em>晴天娃娃</em>的<em>词缀</em>,对翻土的加成具有不同的特性.</p>
+
+<h2>1.3. 生产与文明模块</h2>
+
+<h3>1.3.1. 生产与文明开始</h3>
+
+<p>工作台用以合成物品,<em>生产工作台</em>则用以合成<em>TMOL</em>中有关<em>生产与文明</em>的物品.</p>
+
+<p>在工作台摆放如下以合成<em>生产工作台</em>.
+<img alt="alt 合成占星工作台" title="请脑补将种子替换为铁锭" src="https://s2.ax1x.com/2020/02/05/1sXJbt.png"/></p>
+
+<h3>1.3.2. 坩埚</h3>
+
+<p>在<em>生产工作台</em>中摆放如下以合成<em>坩埚</em>:</p>
+
+<p>(图)</p>
+
+<p><em>坩埚</em>可用来冶金,例如烧炼<em>陨铁矿石碎片</em>.</p>
+
+<h2>1.4. TMOL自然生成结构</h2>
+
+<h3>1.4.1. 木屋</h3>
+
+<p>无实际作用.</p>
+
+<h3>1.4.2. 梦境</h3>
+
+<p>玩家睡眠时,有概率进入<em>梦境</em>.</p>
+
+<h4>1.4.2.1. 梦牢</h4>
+
+<p><em>梦境</em>的内容形式是无限地牢制,由无限个<em>梦牢</em>构成.</p>
+
+<h4>1.4.2.2. 摄梦人/噬梦体</h4>
+
+<p>一旦被<em>摄梦人/噬梦体</em>击败,将失去所有装备并跳出<em>梦境</em>,可在下次进入<em>梦境</em>中取回.</p>
+
+<h3>1.4.3. 古树</h3>
+
+<p><em>TMOL</em>自然生成的一种植物,传说,来自异世界.</p>
+
+<p>古树周围的生物都去了灵魂,变得僵硬,传闻是灵力被吸走,充当了古树持之以恒,强大的魔力.</p>
+
+<p>古树能在周围20*20格的范围内,提供永恒持久的魔力.</p>
+
+<h2>1.5. 陨石</h2>
+
+<h3>1.5.1. 陨石坑</h3>
+
+<p><em>TMOL</em>提供了一种新的矿石来源,陨石坑,陨石坑拥有大量的陨石矿石,需要石镐才可采集.</p>
+
+<p><em>陨石坑</em>分布于地表.</p>
+
+<h3>1.5.2. 陨铁矿石</h3>
+
+<p>一个陨石坑通常拥有7~10块陨铁矿石,用石镐采集获得1个陨石矿石碎片.</p>
+
+<h3>1.5.3. 陨铁锭</h3>
+
+<p>将<em>陨石碎片</em>放在<em>坩埚</em>中烧炼而成.</p>
+
+<p>陨铁锭是一种来自异界的金属,拥有极高的质量和魔力.</p>
+
+<h3>1.5.4. 陨铁稿</h3>
+
+<p>2个木棍+3个陨铁锭</p>
+
+<h3>1.5.5. 陨铁锄,陨铁铲,陨铁斧等</h3>
+
+<h3>1.5.6. 流星上的猪</h3>
+
+<p>在陨石坑旁边,有极低的概率生成流星上的猪.</p>
